	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup
	  performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* fix http scrape
	* add missing port mapping functions to python binding
	* fix bound-checking issue in bdecoder
	* expose missing dht_settings fields to python
	* add function to query the DHT settings
	* fix bug in 'dont_count_slow_torrents' feature, which would start too many
	  torrents

1.0.5 release

	* improve ip_voter to avoid flapping
	* fixed bug when max_peerlist_size was set to 0
	* fix issues with missing exported symbols when building dll
	* fix division by zero bug in edge case while connecting peers

1.0.4 release

	* fix bug in python binding for file_progress on torrents with no metadata
	* fix assert when removing a connected web seed
	* fix bug in tracker timeout logic
	* switch UPnP post back to HTTP 1.1
	* support conditional DHT get
	* OpenSSL build fixes
	* fix DHT scrape bug

1.0.3 release

	* python binding build fix for boost-1.57.0
	* add --enable-export-all option to configure script, to export all symbols
	  from libtorrent
	* fix if_nametoindex build error on windows
	* handle overlong utf-8 sequences
	* fix link order bug in makefile for python binding
	* fix bug in interest calculation, causing premature disconnects
	* tweak flag_override_resume_data semantics to make more sense (breaks
	  backwards compatibility of edge-cases)
	* improve DHT bootstrapping and periodic refresh
	* improve DHT maintanence performance (by pinging instead of full lookups)
	* fix bug in DHT routing table node-id prefix optimization
	* fix incorrect behavior of flag_use_resume_save_path
	* fix protocol race-condition in super seeding mode
	* support read-only DHT nodes