@@ -245,7 +245,7 @@ namespace libtorrent
 		SET(suggest_mode, settings_pack::no_piece_suggestions, 0),
 		SET(max_queued_disk_bytes, 1024 * 1024, &session_impl::update_queued_disk_bytes),
 		SET(handshake_timeout, 10, 0),
-		SET(send_buffer_low_watermark, 512, 0),
+		SET(send_buffer_low_watermark, 10 * 1024, 0),
 		SET(send_buffer_watermark, 500 * 1024, 0),
 		SET(send_buffer_watermark_factor, 50, 0),
 		SET(choking_algorithm, settings_pack::fixed_slots_choker, 0),
@@ -304,7 +304,7 @@ namespace libtorrent
 		SET(connections_limit, 200, &session_impl::update_connections_limit),
 		SET(connections_slack, 10, 0),
 		SET(utp_target_delay, 100, 0),
-		SET(utp_gain_factor, 1500, 0),
+		SET(utp_gain_factor, 3000, 0),
 		SET(utp_min_timeout, 500, 0),
 		SET(utp_syn_resends, 2, 0),
 		SET(utp_fin_resends, 2, 0),
